--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<title>Login - FilmyBar</title>
-		<link rel="stylesheet" href="login.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<div class="navbar">
